# ifs-cloud-core-mcp-server

./: .gitignore  BEFORE_AFTER_COMPARISON.md  CACHING.md  CLEANUP_COMPLETE.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  CLIENT_ANALYZER.md  CLIENT_ANALYZER_COMPLETION.md  CLI_API_SPECIFICATION.md  COLBERT_HYBRID_SEARCH_ARCHITECTURE.md  COMPLETION_SUMMARY.md  CONSERVATIVE_ANALYZER.md  EMBEDDING_FRAMEWORK_README.md  ENHANCEMENTS.md  FASTAI_BENCHMARK_RESULTS.md  FASTAI_SEMANTIC_SEARCH.md  FEASABILITY_ANALYSIS.md  GUI_MAPPING_EXTRACTION_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENT_ANALYSIS.md  INTEGRATION_SUMMARY.md  INTELLIGENT_AGENT.md  LICENSE  METADATA_EXTRACTION_CLI.md  MODEL_QUANTIZATION_RESULTS.md  PROJECTION_ANALYZER.md  PURPOSE.md  QUANTIZED_MODEL_DEFAULT_IMPLEMENTATION.md  QUICK_START.md  README.md  SEARCH_IMPROVEMENTS.md  SEMANTIC_SEARCH.md  SEMANTIC_SEARCH_EXPLAINED.md  SEMANTIC_SEARCH_IMPLEMENTATION.md  SYSTEM_TECHNICAL_SUMMARY_FOR_OPUS.md  TRAINING_SEMANTIC_SEARCH.py  The search ranking is not that great, it.md  WEB_UI_README.md  ZIP_INDEXING_INSTRUCTIONS.md  ZIP_WALKTHROUGH.md  (+43 more)
activity_index/: .managed.json  meta.json
data/: gui_navigation_mappings.json
demo_index/: meta.json
demo_index/metadata/25.1.0-DEMO/: metadata_extract.json
docs/: COMPONENT_ARCHITECTURE.md  DATABASE_METADATA_ANALYSIS.md  ENHANCED_SEARCH_GUIDE.md  INTELLIGENT_SEARCH_INTEGRATION.md  MODERN_WEB_UI.md
examples/: client_copilot_integration.py  copilot_integration.py
examples/sample_ifs_project/: CustomerOrder.entity  CustomerOrderAPI.plsql  CustomerOrderClient.client  CustomerOrderHandling.projection  CustomerOrderStorage.storage  CustomerOrderView.views  OrderManagement.fragment
ifs_cache_test/: .managed.json  cache_metadata.json  meta.json
issues/: 1_comments.md  expense-sheet-authorization-analysis.md
metadata/25.1.0-DEMO/: metadata_extract.json
scripts/: ExtractModelFromCoreFiles.ps1  UPLOAD_README.md  benchmark_batch_classifier.py  benchmark_classifier.py  benchmark_resources.py  demo_quantized_model.py  prepare_model_release.py  quantize_model.py  test_quantized_model.py  train_proper_fastai.py  upload_to_github.bat  upload_to_github.ps1  upload_to_github.py  validate_quantized_default.py
sql/: extract_gui_mappings.sql
src/ifs_cloud_mcp_server/: __init__.py  __main__.py  analysis_engine.py  client_analyzer.py  config.py  copilot_integration.py  demo_search_integration.py  directory_utils.py  embedding_processor.py  enhanced_search.py  extract_metadata.py  fragment_analyzer.py  gui_mapping_extractor.py  hybrid_search.py  indexer.py  intent_classifier.py  launcher.py  main.py  metadata_extractor.py  metadata_indexer.py  model_config.py  model_downloader.py  parsers.py  plsql_analyzer.py  projection_analyzer.py  proper_fastai_classifier.py  search_engine.py  server.py  server_fastmcp.py  standalone.py  web_ui.py
src/ifs_cloud_mcp_server/config/: model_config.json
src/ifs_cloud_mcp_server/data/: gui_navigation_mappings.json
src/ifs_cloud_mcp_server/models/: intent_classifier.pkl
src/ifs_cloud_mcp_server/semantic_search/: NEXT_TASK.md  OPTIMAL_APPROACH.md  __init__.py  ai_summarizer.py  data_loader.py  data_structures.py  embedding_framework.py  engine.py  indexer.py  models.py  plsql_parser_chunker.py  production_data_structures.py  production_embedding_framework.py  production_safe_search.py  test_ai_summarization.py  trainer.py
static/css/: codemirror-marble-dark.css
static/js/: codemirror-marble-mode.js
syntaxes/: marble.tmLanguage.json
templates/: demo_search.html  index.html  modern_react.html  react.html
test_files/: DeliveryStructure.client
test_index/: meta.json
tests/: __init__.py  test_indexer.py
themes/: marble-dark-theme.json
