[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ifs-cloud-mcp-server"
version = "0.1.0"
description = "MCP Server for IFS Cloud with hybrid search (BM25S + FAISS) integration"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "IFS Cloud Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=2.11.3",
    "requests>=2.32.4",
    "numpy>=2.2.6",
    "transformers>=4.55.2",
    "faiss-cpu>=1.12.0",
    "bm25s>=0.2.6",
    "flashrank>=0.2.9",
    "tiktoken>=0.11.0",
    "nltk>=3.9.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
gpu129 = [
    "torch>=2.8.0"
]
gpu128 = [
    "torch>=2.8.0"
]
gpu126 = [
    "torch>=2.8.0"
]
cpu = [
    "torch>=2.8.0"
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "gpu129" },
    { extra = "gpu128" },
    { extra = "gpu126" },
  ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu129",  extra = "gpu129" },
    { index = "pytorch-cu128",  extra = "gpu128" },
    { index = "pytorch-cu126",  extra = "gpu126" },
    { index = "pytorch-cpu",  extra = "cpu" },
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[project.urls]
Homepage = "https://github.com/graknol/ifs-cloud-core-mcp-server"
Repository = "https://github.com/graknol/ifs-cloud-core-mcp-server"

[project.scripts]
ifs-cloud-mcp-server = "ifs_cloud_mcp_server.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[dependency-groups]
# Currently no development-specific dependencies needed beyond core dependencies
